--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,12 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.6.0"
-    }
+    },
+
+    "autoload":{
+        "psr-4": {
+            "Lemon\\": "lemon/",
+        }
+    },
+
 }
